--- a/package.json
+++ b/package.json
@@ -6,74 +6,13 @@
   "description": "Render interfaces using pure functions and virtual DOM",
   "main": "lib/index.js",
   "jsnext:main": "es/index.js",
-  "scripts": {
-    "clean": "rimraf lib _book",
-    "build": "npm run build:commonjs && npm run build:es",
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
-    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
-    "test": "cross-env BABEL_ENV=commonjs hihat test/index.js -- --debug -t babelify -p tap-dev-tool",
-    "test:headless": "cross-env BABEL_ENV=commonjs browserify test/index.js -t babelify | tape-run",
-    "test:browsers": "cross-env BABEL_ENV=commonjs zuul -- ./test/index.js",
-    "test:lint": "standard src/**/*.js test/**/*.js | snazzy",
-    "docs:install": "gitbook install",
-    "docs:build": "npm run docs:install && gitbook build",
-    "docs:serve": "npm run docs:install && gitbook serve",
-    "docs:deploy": "npm run docs:build && gh-pages -d _book",
-    "prepublish": "npm run clean && npm run build",
-    "preversion": "npm run clean && npm run test:lint",
-    "version": "npm run build",
-    "postversion": "git push && git push --tags && npm run clean",
-    "standalone": "browserify src/index.js -s deku -t babelify -o dist/deku.js",
-    "example:basic": "budo examples/basic/index.js -- -t babelify",
-    "test:ts": "rm -rf .tmp && webpack --config ./webpack.config.test.js && tape .tmp/bundle.js"
-  },
+  "scripts": {},
   "devDependencies": {
     "@types/tape": "^4.2.28",
     "awesome-typescript-loader": "^2.2.4",
-    "babel-cli": "6.3.17",
-    "babel-plugin-check-es2015-constants": "^6.7.2",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.6.5",
-    "babel-plugin-transform-es2015-block-scoping": "^6.7.1",
-    "babel-plugin-transform-es2015-classes": "^6.6.5",
-    "babel-plugin-transform-es2015-computed-properties": "^6.6.5",
-    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
-    "babel-plugin-transform-es2015-duplicate-keys": "^6.6.4",
-    "babel-plugin-transform-es2015-for-of": "^6.6.0",
-    "babel-plugin-transform-es2015-function-name": "^6.5.0",
-    "babel-plugin-transform-es2015-literals": "^6.5.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.4",
-    "babel-plugin-transform-es2015-object-super": "^6.6.5",
-    "babel-plugin-transform-es2015-parameters": "^6.7.0",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
-    "babel-plugin-transform-es2015-spread": "^6.6.5",
-    "babel-plugin-transform-es2015-sticky-regex": "^6.5.0",
-    "babel-plugin-transform-es2015-template-literals": "^6.6.5",
-    "babel-plugin-transform-es2015-typeof-symbol": "^6.6.0",
-    "babel-plugin-transform-es2015-unicode-regex": "^6.5.0",
-    "babel-plugin-transform-react-jsx": "6.1.18",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-polyfill": "6.1.19",
-    "babel-preset-stage-2": "6.1.18",
-    "babelify": "7.2.0",
-    "browserify": "13.0.0",
-    "browserify-hmr": "^0.3.1",
-    "budo": "7.1.0",
-    "cross-env": "^1.0.7",
-    "gh-pages": "0.8.0",
-    "gitbook": "2.6.6",
-    "hihat": "2.6.4",
-    "is-dom": "1.0.5",
-    "rimraf": "2.5.0",
-    "snazzy": "2.0.1",
-    "standard": "5.4.1",
-    "tap-dev-tool": "1.3.0",
     "tape": "4.2.2",
-    "tape-run": "2.1.0",
-    "trigger-event": "1.0.0",
     "typescript": "^2.0.6",
-    "webpack": "^1.13.3",
-    "zuul": "3.9.0"
+    "webpack": "^1.13.3"
   },
   "dependencies": {
     "@f/create-element": "1.0.0",
