--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "baseUrl": ".",
     "paths": {
       "*": [
-        "./srcts/*",
-        "./testts/*"
+        "./src/*",
+        "./test/*"
       ]
     },
     "sourceMap": true,
