--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
   "main": "lib/index.js",
   "jsnext:main": "es/index.js",
   "scripts": {
-    "test": "rm -rf .tmp && webpack --config ./webpack.config.test.js && ./node_modules/.bin/tape .tmp/bundle.js"
+    "build": "./node_modules/.bin/webpack",
+    "test:clean": "rm dist/spec.js",
+    "test:build": "node_modules/.bin/webpack --config ./webpack.spec.config.js",
+    "test:run": "node_modules/.bin/mocha dist/spec.js"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
     "@types/tape": "^4.2.28",
     "awesome-typescript-loader": "^2.2.4",
+    "chai": "^3.5.0",
     "is-dom": "^1.0.5",
+    "mocha": "^3.1.2",
     "tape": "4.2.2",
     "trigger-event": "^1.0.3",
     "typescript": "^2.0.6",
