--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "devDependencies": {
     "@types/jest": "^16.0.0",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "^3.0.0-beta.14",
     "jest": "^17.0.3",
     "ts-jest": "^17.0.0",
-    "typescript": "^2.0.8",
-    "webpack": "^1.13.3"
+    "typescript": "^2.1.4",
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "dift": "^0.1.12"
