--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "sourceMap": true,
     "target": "es5",
     "jsx": "react",
-    "reactNamespace": "deku"
+    "reactNamespace": "deku",
+    "strictNullChecks": true
   },
   "exclude": [
     "node_modules"
